# eedro

./: .dockerignore  .editorconfig  .flake8  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.py
ci/base/: Dockerfile
ci/tests/: Dockerfile  run.sh
eedro/: __main__.py
eedro/contrib/: log.py  settings.py
eedro/contrib/cli/: base.py
eedro/contrib/utils/: __init__.py  buffered_writer.py  decorators.py  rate_limiter.py
eedro/core/cli/: main.py
eedro/core/cli/startproject/: command.py
eedro/core/cli/startproject/templates/: .dockerignore  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.py
eedro/core/cli/startproject/templates/ci/base/: Dockerfile
eedro/core/cli/startproject/templates/ci/nginx/templates/: ping.conf.template
eedro/core/cli/startproject/templates/ci/ping/: run.sh
eedro/core/cli/startproject/templates/ci/pong/: run.sh
eedro/core/cli/startproject/templates/ci/tests/: Dockerfile
eedro/core/cli/startproject/templates/etc/: requirements-tests.txt  requirements.txt
eedro/core/cli/startproject/templates/root_namespace/: __main__.py  __version__.py
eedro/core/cli/startproject/templates/root_namespace/contrib/: README.md
eedro/core/cli/startproject/templates/root_namespace/core/: README.md
eedro/core/cli/startproject/templates/root_namespace/core/cli/: hello.py  manage.py
eedro/core/cli/startproject/templates/root_namespace/core/server/: base.py  ping.py  pong.py
eedro/core/cli/startproject/templates/tests/: test_hello.py  test_ping.py  test_pong.py  test_version.py
etc/: requirements-tests.txt  requirements.txt
tests/eedro/: test_main_module.py  test_version.py
tests/eedro/contrib/: test_log.py  test_settings.py
tests/eedro/contrib/cli/: test_base.py
tests/eedro/contrib/utils/: test_buffered_writer.py  test_decorators.py  test_import_string.py  test_rate_limiter.py
tests/eedro/core/cli/: test_main.py
tests/eedro/core/cli/startproject/: test_command.py  test_smoke.py
