[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eedro"
dynamic = ["version"]
authors = [{ name = "Toxa Yantsen" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click~=8.3.1",
    "PyYAML~=6.0.3",
    "pydantic-settings~=2.13.1",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-asyncio",
]
dev = [
    "flake8~=7.3.0",
    "black~=26.1.0",
    "isort~=8.0.1",
]

[project.scripts]
eedro = "eedro.__main__:main_cmd"

[tool.setuptools.dynamic]
version = { attr = "eedro.__version__.VERSION" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["eedro*"]

[tool.setuptools.package-data]
eedro = ["core/cli/startproject/templates/**/*"]

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = 88
extend_skip = ["eedro/core/cli/startproject/templates"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude="""
(
^/eedro/core/cli/startproject/templates
)
"""

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/pytest_cache"
asyncio_mode = "auto"
markers = [
    "asyncio",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "eedro",
]

[tool.coverage.report]
show_missing = true
