[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eedro"
dynamic = ["version"]
authors = [{ name = "Toxa Yantsen" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click~=8.3.1",
    "PyYAML~=6.0.3",
    "pydantic-settings~=2.13.1",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-asyncio",
]
dev = [
    "ruff~=0.15.12",
]

[project.scripts]
eedro = "eedro.__main__:main_cmd"

[tool.setuptools.dynamic]
version = { attr = "eedro.__version__.VERSION" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["eedro*"]

[tool.setuptools.package-data]
eedro = ["core/cli/startproject/templates/**/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "build",
    "eedro/core/cli/startproject/templates",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/pytest_cache"
asyncio_mode = "auto"
markers = [
    "asyncio",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "eedro",
]

[tool.coverage.report]
show_missing = true
