[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "$%{project_name}"
dynamic = ["version"]
authors = [{ name = "<name of the author of the $%{project_title} project>" }]
description = "<description of the $%{project_title} project>"
license = { text = "<license of the $%{project_title} project>" }
dependencies = [
    "click~=8.3.1",
    "aiohttp~=3.13.3",
    "PyYAML~=6.0.3",
]

[dependency-groups]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
]
dev = [
    "ruff~=0.15.12",
]

[project.scripts]
$%{project_name} = "$%{root_namespace}.__main__:manage_cmd"

[tool.setuptools.dynamic]
version = { attr = "$%{root_namespace}.__version__.VERSION" }

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["$%{root_namespace}*"]

#[tool.setuptools.package-data]
#$%{root_namespace} = ["path/to/resource/dir/*"]

[tool.ruff]
line-length = 88
target-version = "$%{ruff_target_version}"
extend-exclude = [
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/pytest_cache"
asyncio_mode = "auto"
markers = [
    "asyncio",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "$%{root_namespace}",
]

[tool.coverage.report]
show_missing = true
